--- a/css/style.css
+++ b/css/style.css
@@ -1685,7 +1685,7 @@ body, h1, h2, h3, h4, p, span, div, li, button, input, textarea {
     fill: #ffffff !important; /* Cruz roxa dentro da estola branca */
 }
 /* ========================================= */
-/* 1. REGRA GERAL (Para Início, Bíblia, etc.)*/
+/* 1. REGRA GERAL (Para Início, Bíblia, etc...)*/
 /* ========================================= */
 
 /* Todos os itens ativos ficam com a cor padrão (provavelmente seu Azul) */
